// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<div
  class="css-wc19cd"
>
  <button
    class="css-lw3cch"
    color="#9DB06A"
    type="text"
  >
    ?
  </button>
</div>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<div
  class="css-wc19cd"
>
  <button
    class="css-1u9m2be"
    color="#E86C76"
    type="text"
  >
    ?
  </button>
</div>
`;
